# tiny-agents

./: .gitignore  Demo0_完整执行提示词.md  Goal_Misalignment_Demo0_详细设置.md  Goal_Misalignment_Demo0_重新设计.md  Goal_Misalignment_必要Demo清单.md  Goal_Misalignment_研究提案_v2.md  Goal_Misalignment_研究提案_v3.md  README.md  pyproject.toml  requirements.txt
benchmarks/: DELEGATION_VALUE_BENCH.py  MULTI_AGENT_BENCHMARK_V2.py  analyze_s3_vs_s4.py  goal_misalign_bench.py  goal_misalignment_exp.py  goal_misalignment_realistic.py  goal_misalignment_revised.py  goal_misalignment_v4.py  gsm8k_runner.py  humaneval_runner.py  math_runner.py  mathvista_runner.py  multi_hop_qa_alignment.py  spawnbench_episodes.jsonl  spawnbench_report.py  spawnbench_runner.py  visualize_alignment.py
configs/: agents.yaml
docs/: phase2_report.md  spawnbench_smoke_test_report.md
examples/: demo_multi_round.py  demo_two_agents.py
output/: LoRA_in_Vision_Models_2026-04-22.md  test_report.md
pedg_experiment/: README.md  main_experiment.py  parallel_launcher.py  parallel_launcher.sh  requirements.txt  run_single.sh
scripts/: demo_research_review.py  download_models.py  download_qwen35_9b.sh  run_full_math_benchmark.py  run_gsm8k_benchmark.py  run_gsm8k_tool_benchmark.py  run_humaneval_multiagent.py  run_math_benchmark.py  run_mathvista_multiagent.py  score_math_results.py  test_tools.py  test_vlm_chat.py  test_vlm_e2e.py  test_vlm_load.py
spawnbench/: README.md  analyze.py  generate_tasks.py  principal_interpretation.py  principal_interpretation_key_contrasts.csv  principal_interpretation_summary_by_condition.csv  (+3 more)
(+137 files in other folders)
