[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tiny-agents"
version = "0.1.0"
description = "Multi-agent framework powered by small language models"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "RidenShogunei"}
]
keywords = ["llm", "agent", "multi-agent", "small-models", "qwen"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "torch>=2.3.0",
    "transformers>=4.40.0",
    "accelerate>=0.30.0",
    "peft>=0.11.0",
    "vllm>=0.5.0",
    "outlines>=0.0.46",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "jinja2>=3.1.0",
    "tqdm>=4.66.0",
    "datasets>=2.19.0",
    "numpy>=1.26.0",
    "pillow>=10.0.0",
    "qwen-vl-utils>=0.0.8",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23.0",
    "black>=24.0",
    "ruff>=0.4.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["tiny_agents*"]
